# challenge3-the-lord-of-the-strings

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  RESULTS.md  convergence_test.asv  convergence_test.m  data.txt  gandalf_the_gray.cfg  gandalf_the_grey.cfg  gandalf_the_white.cfg  hw.info  main.cpp  solution.vtk  test_case.cfg
include/: Alias.hpp  DataManager.hpp  Solver.hpp  Utils.hpp
src/: DataManager.cpp  Solver.cpp  Utils.cpp
test/: convergence_test.cpp  seqpar_test.cpp  test1.cpp
